test/bad/identifier5.prog
//missing definition: state symbols are private, only output symbols are public
stream first
input
state
    g x = x + 1
output
    f x = g (x + 1)
initial
    f x = x,
    g x = x;

stream main
input first
state
output
    h = first.g h
initial h = 1
